; ModuleID = '/home/carl/AnghaBench/poco/SevenZip/src/extr_XzDec.c_Lzma2State_Code.c'
source_filename = "/home/carl/AnghaBench/poco/SevenZip/src/extr_XzDec.c_Lzma2State_Code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LZMA_STATUS_FINISHED_WITH_MARK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32*, i32*, i32*, i32, i32, i32*)* @Lzma2State_Code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Lzma2State_Code(i8* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32 %5, i32 %6, i32* %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  store i8* %0, i8** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32* %7, i32** %16, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = load i32*, i32** %10, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = load i32*, i32** %13, align 8
  %25 = load i32, i32* %15, align 4
  %26 = call i32 @Lzma2Dec_DecodeToBuf(i32* %20, i32* %21, i32* %22, i32* %23, i32* %24, i32 %25, i64* %17)
  store i32 %26, i32* %18, align 4
  %27 = load i32, i32* %14, align 4
  store i32 %27, i32* %14, align 4
  %28 = load i64, i64* %17, align 8
  %29 = load i64, i64* @LZMA_STATUS_FINISHED_WITH_MARK, align 8
  %30 = icmp eq i64 %28, %29
  %31 = zext i1 %30 to i32
  %32 = load i32*, i32** %16, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* %18, align 4
  ret i32 %33
}

declare dso_local i32 @Lzma2Dec_DecodeToBuf(i32*, i32*, i32*, i32*, i32*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
